<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DeliveryPayment"
    android:background="@drawable/delivery8"
    >

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/interface3"
        android:textColor="#DD2C00"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="136dp"
        android:background="#000000"
        android:text="NEXT"
        android:textColor="#96270C"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="112dp"
        android:layout_height="63dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15"
        app:srcCompat="@drawable/tap3" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="68dp"
        android:background="#FFC300"
        android:fontFamily="sans-serif-medium"
        android:text="1000.00"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView10"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="110dp"
        android:layout_height="53dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="76dp"
        android:background="#000000"
        android:text="@string/Pay1"
        android:textColor="#4AB009"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/textView17"
        app:layout_constraintHorizontal_bias="0.212"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="108dp"
        android:layout_height="32dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:background="#000000"
        android:text="@string/Pay4"
        android:textColor="#4AB009"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <EditText
        android:id="@+id/pinNo"
        android:layout_width="167dp"
        android:layout_height="29dp"
        android:layout_marginEnd="10dp"
        android:background="#fafafa"
        android:ems="10"
        android:hint="    PIN Number"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.948"
        app:layout_constraintStart_toEndOf="@+id/textView11" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="103dp"
        android:layout_height="30dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:background="#000000"
        android:text="@string/Pay2"
        android:textColor="#4AB009"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <EditText
        android:id="@+id/destination"
        android:layout_width="165dp"
        android:layout_height="29dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:background="#fafafa"
        android:ems="10"
        android:hint="   Destination"
        android:inputType="textCapWords"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.969"
        app:layout_constraintStart_toEndOf="@+id/textView12"
        app:layout_constraintTop_toBottomOf="@+id/pinNo" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="128dp"
        android:layout_height="49dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:background="#000000"
        android:text="@string/Pay3"
        android:textColor="#4AB009"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <EditText
        android:id="@+id/km"
        android:layout_width="153dp"
        android:layout_height="33dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="20dp"
        android:background="#fafafa"
        android:ems="10"
        android:hint="    KM"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textView14"
        app:layout_constraintTop_toBottomOf="@+id/destination" />

</androidx.constraintlayout.widget.ConstraintLayout>